[metadata]
name = traveltimepy
version = attr: traveltimepy.version.__version__
description = Python Interface to Travel Time
long_description = file: README.md
keywords = traveltimepy, api, maps
license = MIT
author = TravelTime

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.7
packages = find_namespace:
install_requires =
	requests
	pydantic
	geojson-pydantic
	dacite
	certifi >= 2021.5.30
	aiohttp
test_require =
	pytest
